manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: event-management-service
    project: event-management-service
  name: event-management-service
spec:
  selector:
    matchLabels:
      app: event-management-service
  template:
    metadata:
      labels:
        app: event-management-service
        project: event-management-service
        istio.io/rev: "asm-managed-stable"
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "false"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - event-management-service
                topologyKey: kubernetes.io/hostname
      containers:
        - name: event-management-service
          image: event-management-service
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 512
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 1000m
              memory: 1000M
          volumeMounts:
            - name: cred-secrets
              mountPath: /run/credentials
              readOnly: true
        # [START zc-api-proxy]: Provides authentication for our service.
        - name: event-management-service-api-proxy
          image: zc-api-proxy
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 512
          ports:
            - containerPort: 9000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 35M
      # [END zc-api-proxy]
      volumes:
        - name: cred-secrets
          secret:
            secretName: event-management-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    zenoss.spinnaker_deploy: "true"
  labels:
    app: event-query
    project: event-query
  name: event-query
spec:
  selector:
    matchLabels:
      app: event-query
  template:
    metadata:
      labels:
        app: event-query
        project: event-query
        istio.io/rev: "asm-managed-stable"
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "false"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - event-query
                topologyKey: kubernetes.io/hostname
      containers:
        - name: event-query
          image: event-management-service
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 512
          ports:
            - containerPort: 9080
          resources:
            requests:
              cpu: 1000m
              memory: 1000M
          volumeMounts:
            - name: cred-secrets
              mountPath: /run/credentials
              readOnly: true
            - name: zing-mongodb-event-query-certs
              mountPath: /mongo-user
              readOnly: true
        # [START zc-api-proxy]: Provides authentication for our service.
        - name: event-query-api-proxy
          image: zc-api-proxy
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 512
          ports:
            - containerPort: 9000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 35M
      # [END zc-api-proxy]
      volumes:
        - name: cred-secrets
          secret:
            secretName: event-management-service
        - name: "zing-mongodb-event-query-certs"
          secret:
            secretName: "zing-mongodb-user-event-context-svc"
            items:
              - key: event-context-svc.pem
                path: user.pem
              - key: ca.crt
                path: ca.crt
