manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-management-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: grpc
  selector:
    app: event-management-service
  type: ClusterIP
